only use rest-assured for tests